--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "hapi": "*",
-    "soajs.nodejs": "1.0.*"
+    "soajs.nodejs": "soajs/soajs.nodejs.git"
   },
   "devDependencies": {
   }
