--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "hapi": "*",
+    "hapi": "17.0.1",
     "soajs.nodejs": "1.0.*"
   },
   "devDependencies": {
