--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "soajs.nodejs",
+  "name": "soajs.nodejs.hapi",
   "description": "SOAJS nodejs hapi example",
   "version": "1.1.0",
   "author": {
